--- a/job_portal/static/css/style.css
+++ b/job_portal/static/css/style.css
@@ -1,3 +1,6 @@
+/* =====================
+   AUTH BUTTONS
+===================== */
 .login-btn {
     background: linear-gradient(45deg, #4e73df, #1cc88a);
     color: white;
@@ -22,6 +25,60 @@
     color: white;
 }
 
+/* Card styling */
 .card {
     border-radius: 12px;
+}
+
+
+/* =====================
+   JOB FORM STYLING
+===================== */
+
+/* Form card spacing */
+.form-card {
+    padding: 35px;
+    border-radius: 14px;
+    background: white;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.08);
+}
+
+.form-title {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.form-card label {
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.form-control {
+    width: 100%;
+    border-radius: 8px;
+    padding: 12px;
+    border: 1px solid #ced4da;
+    background-color: #f8f9fa;
+}
+
+.form-control:focus {
+    background-color: white;
+    border-color: #4e73df;
+    box-shadow: none;
+}
+
+
+.primary-btn {
+    background: linear-gradient(45deg, #4e73df, #1cc88a);
+    background-color: #173a2d;
+    border: none;
+    color: white;
+    font-weight: bold;
+    padding: 12px;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+
+.primary-btn:hover {
+    opacity: 0.95;
 }
