Added application deadline feature

--- a/job_portal/templates/jobs/create_job.html
+++ b/job_portal/templates/jobs/create_job.html
@@ -35,6 +35,12 @@
                     {{ form.description }}
                 </div>
 
+                <div class="mb-3">
+                    <label>Application Deadline</label>
+                    {{ form.application_deadline }}
+                </div>
+
+
                 <button class="btn w-100 primary-btn mt-3">
                     Post Job
                 </button>
