--- a/job_portal/templates/accounts/register.html
+++ b/job_portal/templates/accounts/register.html
@@ -1,23 +1,53 @@
 {% extends "base.html" %}
-
 {% block content %}
+
 <div class="row justify-content-center">
-    <div class="col-md-5">
+  <div class="col-md-6">
 
-        <div class="card shadow p-4">
-            <h3 class="text-center mb-3">Register</h3>
+    <div class="card shadow p-4 form-card">
 
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
+      <h3 class="form-title">Register</h3>
 
-                <button class="btn w-100 mt-2 register-btn">
-                    Register
-                </button>
-            </form>
+      <form method="post">
+        {% csrf_token %}
 
+        <div class="mb-3">
+          <label class="form-label">Username</label>
+          {{ form.username }}
+          <small class="text-muted">
+            Required. 150 characters or fewer.
+          </small>
         </div>
 
+        <div class="mb-3">
+          <label class="form-label">Email</label>
+          {{ form.email }}
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Role</label>
+          {{ form.role }}
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Password</label>
+          {{ form.password1 }}
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Confirm Password</label>
+          {{ form.password2 }}
+        </div>
+
+        <button class="btn w-100 register-btn mt-3">
+          Register
+        </button>
+
+      </form>
+
     </div>
+
+  </div>
 </div>
+
 {% endblock %}
