--- a/job_portal/templates/jobs/create_job.html
+++ b/job_portal/templates/jobs/create_job.html
@@ -1,54 +1,50 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="row justify-content-center">
-    <div class="col-md-8 col-lg-6">
+  <div class="col-md-8 col-lg-6">
+    <div class="card shadow form-card">
+      <h3 class="form-title">Post a Job</h3>
 
-        <div class="card shadow form-card">
-            <h3 class="form-title">Post a Job</h3>
+      <form method="post">
+        {% csrf_token %}
 
-            <form method="post">
-                {% csrf_token %}
-
-                <div class="mb-3">
-                    <label>Job Title</label>
-                    {{ form.title }}
-                </div>
-
-                <div class="mb-3">
-                    <label>Company</label>
-                    {{ form.company }}
-                </div>
-
-                <div class="mb-3">
-                    <label>Location</label>
-                    {{ form.location }}
-                </div>
-
-                <div class="mb-3">
-                    <label>Salary</label>
-                    {{ form.salary }}
-                </div>
-
-                <div class="mb-3">
-                    <label>Description</label>
-                    {{ form.description }}
-                </div>
-
-                <div class="mb-3">
-                    <label>Application Deadline</label>
-                    {{ form.application_deadline }}
-                </div>
-
-
-                <button class="btn w-100 primary-btn mt-3">
-                    Post Job
-                </button>
-
-            </form>
-
+        <div class="mb-3">
+          <label>Job Title</label>
+          {{ form.title }}
         </div>
 
+        <div class="mb-3">
+          <label>Company</label>
+          {{ form.company }}
+        </div>
+
+        <div class="mb-3">
+          <label>Location</label>
+          {{ form.location }}
+        </div>
+
+        <div class="mb-3">
+          <label>Job Type</label>
+          {{ form.job_type }}
+        </div>
+
+        <div class="mb-3">
+          <label>Salary</label>
+          {{ form.salary }}
+        </div>
+
+        <div class="mb-3">
+          <label>Description</label>
+          {{ form.description }}
+        </div>
+
+        <div class="mb-3">
+          <label>Application Deadline</label>
+          {{ form.application_deadline }}
+        </div>
+
+        <button class="btn w-100 primary-btn mt-3">Post Job</button>
+      </form>
     </div>
+  </div>
 </div>
 {% endblock %}
