--- a/job_portal/templates/accounts/register.html
+++ b/job_portal/templates/accounts/register.html
@@ -1,22 +1,21 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <div class="row justify-content-center">
   <div class="col-md-6">
-
     <div class="card shadow p-4 form-card">
-
       <h3 class="form-title">Register</h3>
 
       <form method="post">
-        {% csrf_token %}
+        {% csrf_token %} 
+        
+        {% if form.errors %}
+        <div class="alert alert-danger">{{ form.errors }}</div>
+        {% endif %}
 
         <div class="mb-3">
           <label class="form-label">Username</label>
           {{ form.username }}
-          <small class="text-muted">
-            Required. 150 characters or fewer.
-          </small>
+          <small class="text-muted"> Required. 150 characters or fewer. </small>
         </div>
 
         <div class="mb-3">
@@ -39,14 +38,9 @@
           {{ form.password2 }}
         </div>
 
-        <button class="btn w-100 register-btn mt-3">
-          Register
-        </button>
-
+        <button class="btn w-100 register-btn mt-3">Register</button>
       </form>
-
     </div>
-
   </div>
 </div>
 
