--- a/job_portal/templates/jobs/job_list.html
+++ b/job_portal/templates/jobs/job_list.html
@@ -7,7 +7,7 @@
 
 <div class="mb-3">
     <a href="{% url 'job_list' %}"
-       class="btn btn-outline-primary btn-sm">
+       class="btn btn-outline-primary btn-sm ">
        All Jobs
     </a>
 
@@ -24,38 +24,61 @@
 
 <div class="row">
   {% for job in jobs %}
-  <div class="col-md-6 mb-3">
-    <div class="card shadow p-3">
-      <h5>
-        {% if job.job_type == "micro" %}
-        <span class="badge bg-warning text-dark"> Local / Micro Job </span>
-        {% endif %}
+  <div class="col-md-6 mb-4">
+  <div class="job-card p-4">
 
-        <a href="{% url 'job_detail' job.id %}"> {{ job.title }} </a>
+    <div class="d-flex justify-content-between align-items-start">
+
+      <div>
+        <h5 class="fw-bold mb-1">
+          <a href="{% url 'job_detail' job.id %}" class="job-title">
+            {{ job.title }}
+          </a>
+        </h5>
+
+        <p class="text-muted mb-1">
+          {{ job.company }} • {{ job.location }}
+        </p>
+      </div>
+
+      <div class="text-end">
+
+        {% if job.job_type == "micro" %}
+          <span class="badge bg-warning text-dark">
+            Micro
+          </span>
+        {% endif %}
 
         {% if job.id in applied_jobs %}
-        <span class="badge bg-success ms-2"> Applied </span>
+          <span class="badge bg-success">
+            Applied
+          </span>
         {% endif %}
-      </h5>
 
-      {% if job.application_deadline %}
-      <small class="text-danger">
-        Apply before: {{ job.application_deadline }}
-      </small>
-      {% endif %}
+      </div>
 
-      <p><strong>Company:</strong> {{ job.company }}</p>
-      <p><strong>Location:</strong> {{ job.location }}</p>
+    </div>
 
-      <p>{{ job.description|truncatewords:20 }}</p>
+    <p class="mt-3 text-muted">
+      {{ job.description|truncatewords:20 }}
+    </p>
+
+    <div class="d-flex justify-content-between align-items-center mt-3">
 
       <small class="text-muted">
-        Posted {{ job.created_at|timesince }} ago
+        {{ job.created_at|timesince }} ago
       </small>
 
-      <small class="text-muted"> Posted by {{ job.recruiter.username }} </small>
+      {% if job.application_deadline %}
+        <small class="text-danger">
+          Deadline: {{ job.application_deadline }}
+        </small>
+      {% endif %}
+
     </div>
+
   </div>
+</div>
   {% empty %}
   <p>No jobs available.</p>
   {% endfor %}
