--- a/job_portal/templates/jobs/create_job.html
+++ b/job_portal/templates/jobs/create_job.html
@@ -28,6 +28,12 @@
         </div>
 
         <div class="mb-3">
+          <label class="form-label">Required Skills</label>
+          {{ form.required_skills }}
+          <small class="text-muted"> Example: Python, Django, SQL </small>
+        </div>
+
+        <div class="mb-3">
           <label>Salary</label>
           {{ form.salary }}
         </div>
