--- a/job_portal/templates/jobs/job_detail.html
+++ b/job_portal/templates/jobs/job_detail.html
@@ -1,66 +1,55 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <div class="container mt-5">
-
   <div class="job-detail-card p-5">
-
     <div class="d-flex justify-content-between align-items-start">
-
       <div>
-        <h2 class="fw-bold mb-2">
-          {{ job.title }}
-        </h2>
+        <h2 class="fw-bold mb-2">{{ job.title }}</h2>
 
-        <p class="text-muted">
-          {{ job.company }} • {{ job.location }}
-        </p>
+        <p class="text-muted">{{ job.company }} • {{ job.location }}</p>
       </div>
 
       {% if job.job_type == "micro" %}
-        <span class="badge bg-warning text-dark">
-          Micro Job
-        </span>
+      <span class="badge bg-warning text-dark"> Micro Job </span>
       {% endif %}
-
     </div>
 
-    <hr class="my-4">
+    <hr class="my-4" />
 
     {% if job.application_deadline %}
-      <p class="text-danger fw-semibold">
-        Apply before: {{ job.application_deadline }}
-      </p>
+    <p class="text-danger fw-semibold">
+      Apply before: {{ job.application_deadline }}
+    </p>
     {% endif %}
 
-    <p class="mt-4">
-      {{ job.description }}
-    </p>
+    <p class="mt-4">{{ job.description }}</p>
+
+    {% if job.required_skills %}
+    <div class="mt-3">
+      <strong>Required Skills:</strong>
+      <p>{{ job.required_skills }}</p>
+    </div>
+    {% endif %}
 
     <div class="mt-4 text-muted">
-      Posted {{ job.created_at|timesince }} ago
-      • by {{ job.recruiter.username }}
+      Posted {{ job.created_at|timesince }} ago • by {{ job.recruiter.username}}
     </div>
 
     <div class="mt-4">
-
       {% if job.application_deadline and job.application_deadline < today %}
-        <button class="btn btn-danger w-100" disabled>
-          Deadline Passed
-        </button>
+        <button class="btn btn-danger w-100" disabled>Deadline Passed</button>
 
       {% elif applied %}
-        <button class="btn btn-secondary w-100" disabled>
-          Applied ✓
-        </button>
+        <button class="btn btn-secondary w-100" disabled>Applied ✓</button>
 
       {% else %}
-        <a href="{% url 'apply_job' job.id %}"
-           class="btn btn-primary w-100 apply-btn">
-           Apply Now
-        </a>
+      <a
+        href="{% url 'apply_job' job.id %}"
+        class="btn btn-primary w-100 apply-btn"
+      >
+        Apply Now
+      </a>
       {% endif %}
-
     </div>
 
   </div>
